line items: fix text align for no items, summary invoice preview, actual currency never undefined

--- a/packages/sdk-react/src/components/receivables/InvoiceDetails/CreateReceivable/sections/components/InvoicePreview.css
+++ b/packages/sdk-react/src/components/receivables/InvoiceDetails/CreateReceivable/sections/components/InvoicePreview.css
@@ -165,6 +165,7 @@ th.line-items-table__fixed-item {
 .line-items-table .no-items td {
   padding: 0;
   border-bottom-style: solid;
+  text-align: left !important;
   padding-left: 0;
 }
 
